--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-We had to remove the PHPMailer from the final version as it's licensed product so please download it from http://phpmailer.worxware.com/
+We had to remove the PHP Mailer from the final version because of it's licence product so please download it from http://phpmailer.worxware.com/
