--- a/readme
+++ b/readme
@@ -1,1 +1,2 @@
 We had to remove the PHPMailer from the final version as it's licensed product so please download it from http://phpmailer.worxware.com/
+thank you for visiting our site
